--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "http-status": "^1.5.2",
     "jwt-decode": "^3.1.2",
+    "loglevel": "^1.8.0",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
